plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'LuckyVicky'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // spring boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // retry
    implementation 'org.springframework.retry:spring-retry:1.3.4'
    implementation 'org.springframework:spring-aspects'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // AWS S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // coolsms sdk
    implementation 'net.nurigo:sdk:4.2.0'

    // nano id
    implementation 'com.aventrix.jnanoid:jnanoid:2.0.0'

    // database
    runtimeOnly 'com.mysql:mysql-connector-j'

    // firebase
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // test
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.glassfish.tyrus:tyrus-client:2.1.3'
    implementation 'org.glassfish.tyrus:tyrus-container-grizzly-client:2.1.3'
    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:2.1.3'
    implementation 'jakarta.websocket:jakarta.websocket-api:2.1.1'

}

configurations.all {
    exclude group: 'commons-logging', module: 'commons-logging'
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty "LOG_HOME", "./logs"
}

jar {
    enabled = false
}
